# plex

./: .gitattributes  .gitignore  LICENCE.mit  LICENCE.txt  LICENSE  README.md  README.txt  USE.txt  license  plex - Wiki.url
_project/: README.txt
apps/: arConfig.py  arConfig.ui  arLoad.py  arNotice.py  arSave.py  arSave.ui  arUtil.ui
config/: pipeline.py  pipeline.yml  plex.yml
data/: pipeline.py  pipeline.yml  setEnv.py  setup.py
data/exe/: win_maya.bat  (+6 more)
exe/: debug.py  debug_win_desktop.bat  debug_win_houdini.bat  debug_win_maya.bat  debug_win_nuke.bat  pipeline.py  testing.py  win_3dsMax.bat  win_desktop.bat  win_env.bat  win_houdini.bat  win_maya.bat  win_nuke.bat
img/: Thumbs.db  img.qrc
lib/: Thumbs.db  __init__.py  context.py  libClass.py  libData.py  libFileFolder.py  libFileService.py  libFunc.py  libFunction.py  libGit.py  libImage.py  libImg.py  libImport.py  libLog.py  libLogstats.py  libMessageBox.py  libMsgBox.py  libRender.py  libRenderer.py  libRepo.py  libShot.py  libSnapshot.py  libSoftware.py  libUser.py  libUtilities.py  notification.py  pipefunc.py  pipelog.py  pipestats.py  repository.py  snapshot.py  software.py  tank.py  users.py
plugins/: arConfig.py  arDesktop.py  arLoad.py  arNotice.py  arNotice.ui  arSave.py  arSplash.py  arSplash.ui  arUtil.py
project/: README.txt
scripts/: context.py  pipefunc.py  pipeline.py  plex.py  plexfunc.py  plexlog.py  plexstart.py  snapshot.py  software.py  tank.py
settings/: default.py  getDefault.py  getProject.py  maya.py  project_settings.py  setEnv.py  setMaya.py  setRenderer.py  settings.py
software/nuke/plugins/AtoN/: CMakeLists.txt  COPYING  README.md
software/nuke/plugins/AtoN/cmake/: FindArnold.cmake
software/nuke/plugins/AtoN/icon/: Thumbs.db
software/nuke/plugins/AtoN/scripts/: aton.py
software/nuke/plugins/AtoN/src/: Aton.cpp  Client.cpp  Client.h  Data.cpp  Data.h  Driver_Aton.cpp  Server.cpp  Server.h
software/nuke/plugins/AtoN/test/arnold/: test.ass
software/nuke/plugins/AtoN/test/rman/: test.rib  test_light.sl  test_surface.sl
(+1118 files in other folders)
